--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
-  font-size: 20px;
+  font-size: 16px;
   color: azure;
   }
 
@@ -18,39 +18,67 @@ body{
   background-color: rgba(0,0,0,0.9);
 }
 
-img {
-  width: 100px;
-  height: 100px;
+#top{
+  position: absolute;
+  top: 0;
+  justify-items: center;
 }
 
-h1{
-  font-size: 4rem;
-  display: block;
-  left: 10%;
-  position: absolute;
-  top: 30%;
-}
-
-#Intro {
-  display: block;
-  position: absolute;
-  max-width: 50%;
-  justify-content: center;
-  top: 50%;
-  left: 10%;
-  text-align: left;
-}
 
 #introduction {
   opacity: 1;
 }
 
-#introduction #myself {
-  width: 500px;
-  height: 600px;
+#introduction h1{
+  font-size: 3rem;
+  display: block;
+  left: 9%;
   position: absolute;
-  top: -17px;
-  right: 17px;
+  top: 30%;
+}
+
+#introduction h2{
+  font-size: 2rem;
+  display: block;
+  right: 25.5%;
+  position: absolute;
+  top: 30%;
+}
+
+#introduction h3{
+  font-size: 1.5rem;
+  display: block;
+  right: 20%;
+  position: absolute;
+  top: 50%;
+}
+
+#intro {
+  display: block;
+  position: absolute;
+  max-width: 40%;
+  justify-content: center;
+  top: 40%;
+  left: 10%;
+  text-align: left;
+}
+
+#skills {
+  display: block;
+  position: absolute;
+  max-width: 20%;
+  justify-content: center;
+  top: 37%;
+  right: 10%;
+  text-align: left;
+}
+
+#projects h1{
+  font-size: 3rem;
+  position: absolute;
+  text-align: center;
+  top: 95%;
+  left: 43%;
 }
 
 .project1 {
@@ -59,7 +87,7 @@ h1{
   display: inline-block;
   max-width: 30%;
   left: 10%;
-  top: 100%;
+  top: 110%;
   text-align: center;
 }
 
@@ -69,19 +97,29 @@ h1{
   display: inline-block;
   max-width: 30%;
   right: 10%;
-  top: 100%;
+  top: 110%;
   text-align: center;
 }
 
-#down {
-  height: 50px;
+.project3 {
+  height: 500px;
   position: absolute;
-  right: 46%;
-  bottom: 40px;
-  opacity: 1;
-  width: 100px;
+  display: inline-block;
+  max-width: 30%;
+  left: 10%;
+  top: 170%;
+  text-align: center;
 }
 
+.project4 {
+  height: 500px;
+  position: absolute;
+  display: inline-block;
+  max-width: 30%;
+  right: 10%;
+  top: 170%;
+  text-align: center;
+}
 
 .projects li:hover{
   color: gold;
@@ -98,6 +136,7 @@ h1{
 footer { 
   width: 100%; 
   position: fixed; 
+  max-height: 50px;
   z-index: 1; 
   bottom: 0; 
   background-color: rgb(37, 37, 37); 
@@ -108,95 +147,6 @@ footer {
   box-shadow: 0 5px 10px rgba(17, 17, 17, 0.358);
 }
 
-.corners #corner1 {
-  position: absolute;
-  left: 0;
-  opacity: 1;
-  top: 60px;
-}
-
-.corners #corner2 {
-  position: fixed;
-  right: 0;
-  opacity: 0;
-  top: 60px;
-}
-
-.corners #corner3 {
-  position: absolute;
-  bottom: 60px;
-  opacity: 1;
-  right: 0;
-}
-
-.corners #corner4 {
-  position: fixed;
-  bottom: 60px;
-  opacity: 0;
-  left: 0;
-}
-
-#gmail {
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-  position: absolute;
-  display: inline-block;
-  text-align: center;
-  bottom: 10px;
-  left: 60%;
-}
-
-#linkedin {
-  width: 35px;
-  height: 30px;
-  cursor: pointer;
-  position: absolute;
-  text-align: center;
-  display: inline-block;
-  bottom: 10px;
-  left: 40%;
-}
-
-#github {
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-  position: absolute;
-  text-align: center;
-  display: inline-block;
-  bottom: 10px;
-  left: 50%;
-}
-
-
-
-
-.button {
-  border: none;
-  font-size: 19px;
-  color: azure;
-  font-weight: 500;
-  letter-spacing: 1px;
-  border-radius: 6px;
-  cursor: pointer;
-  transition: all 0.3s ease,box-shadow 0.15s ease-in-out;
-  text-align: center;
-  vertical-align: middle;
-  background-color: transparent;
-  border: 1px solid transparent;
-  line-height: 1.5;
-  margin: auto;
-  margin-bottom: -4%;
-}
-
-.button button:hover{
-  color: yellow;
-}
-
-.button button:hover ~ i{
-  color: yellow;
-}
 
 /* The Navigation Menu */
 
@@ -213,10 +163,10 @@ footer {
     padding-top: 60px; 
     transition: 0.5s; 
     box-shadow: 0 5px 10px rgba(17, 17, 17, 0.358);
-
+    text-decoration: none;
   }
   
-.rightbar a {
+.rightbar #II {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
@@ -224,7 +174,31 @@ footer {
     display: inline-block;
     position: absolute;
     transition: 0.3s;
-    left: 40%;
+    left: 23%;
+    top: 6px;
+  }
+
+.rightbar #CC {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: azure;
+    display: inline-block;
+    position: absolute;
+    transition: 0.3s;
+    left: 63%;
+    top: 6px;
+  }
+
+.rightbar #PP {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: azure;
+    display: inline-block;
+    position: absolute;
+    transition: 0.3s;
+    left: 43%;
     top: 6px;
   }
   
@@ -232,26 +206,27 @@ footer {
     display: inline-block;
     position: absolute;
     text-align: right;
-    top: 0;
+    top: 5px;
     right: 25px;
     font-size: 36px;
     margin-left: 20px;
+    text-decoration: none;
   }
   
 .rightbar .closebtn:hover {
-  color: yellow;
+  color: gold;
 }
 
-.rightbar .PP:hover {
-    color: yellow;
+.rightbar #CC:hover {
+    color: gold;
 }
 
-.rightbar .II:hover {
-  color: yellow;
+.rightbar #II:hover {
+  color: gold;
 }
 
-.rightbar .LL:hover {
-  color: rgb(141, 0, 0);
+.rightbar #PP:hover {
+  color: gold;
 }
 
 .burger {
