--- a/img.css
+++ b/img.css
@@ -4,7 +4,6 @@ img {
     height: 100px;
   }
 
-  
 .logos {
   width: 40px;
   height: 40px;
@@ -120,7 +119,6 @@ img {
   right: 12%;
 }
 
-
 #down {
   height: 50px;
   width: 50px;
@@ -217,4 +215,59 @@ img {
   display: inline-block;
   bottom: 10px;
   left: 50%;
+}
+
+@media only screen and (max-width: 600px) {
+  
+#img1, #img2, #img3, #img4, #img5, #img6, #img7, #img8, #img9, #img10, #img11, #img12 {
+  display: none;
+}
+
+.corners #corner2 {
+  position: absolute;
+  top: 110%;
+  right: 40px;
+  height: 50px;
+  width: 50px;
+}
+
+.corners #corner4 {
+  position: absolute;
+  top: 110%;
+  left: 40px;
+  height: 50px;
+  width: 50px;
+}
+
+#arrow {
+  height: 40px;
+  width: 40px;
+  }
+
+#down{
+  right: 45%;
+  bottom: 7%;  
+}
+
+#up {
+  right: 45%;
+  bottom: -210%;
+}
+
+#gmail {
+  bottom: 10px;
+  left: 80%;
+}
+
+#linkedin {
+  bottom: 10px;
+  left: 10%;
+}
+
+#github {
+  bottom: 10px;
+  left: 45%;
+}
+
+
 }
